10261-story: fix tab content spacing so that there is spacing above the tab content only for the practitioner case lists

--- a/web-client/src/styles/tabs.scss
+++ b/web-client/src/styles/tabs.scss
@@ -244,3 +244,7 @@
     margin-bottom: 0 !important;
   }
 }
+
+.tab-content-with-top-margin {
+  margin-top: 2.5rem;
+}
